# PatchworldBridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Standalone OSC.jucer  build_debug_serial.txt  build_debug_serial_utf8.txt  build_error_ascii.txt  build_error_fixed.txt  build_log.txt  build_log_2.txt  build_log_after_fixes.txt  build_log_attempt_2.txt  build_log_clean.txt  build_log_clean_rebuild.txt  build_log_clean_rebuild_final.txt  build_log_cleanup.txt  build_log_cmake_fix.txt  build_log_cmake_update.txt  build_log_control_sync.txt  build_log_control_sync_final.txt  build_log_control_sync_fix.txt  build_log_crashfix.txt  build_log_debug_1.txt  build_log_debug_2.txt  build_log_errors.txt  build_log_final_attempt.txt  build_log_final_fix.txt  build_log_final_verification.txt  build_log_fixed_cmake.txt  build_log_graphicsobj.txt  build_log_ip_error.txt  build_log_minimal.txt  build_log_noimage.txt  build_log_part1_retry.txt  build_log_pointer_fix.txt  build_log_raw_ptr.txt  build_log_refactor.txt  build_log_refactor_fix.txt  build_log_refinement.txt  (+16 more)
.github/workflows/: build.yml
Builds/Android/: local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/Patchworld MIDI OSC Bridge.xcodeproj/: project.pbxproj
Builds/MacOSX/PatchworldBridge.xcodeproj/: project.pbxproj
Builds/MacOSX/Standalone OSC.xcodeproj/: project.pbxproj
Builds/MacOSX/StandaloneOSC.xcodeproj/: project.pbxproj
Builds/VisualStudio2026/: resources.rc
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: ControlProfile.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiScheduler.h  SubComponents.h
Source/Audio/: AudioEngine.cpp  AudioMemoryPool.h  ChordDetector.h  ClockSmoother.cpp  ClockSmoother.h  LockFreeUtilities.h  MidiRouter.cpp  MidiRouter.h  MidiScheduler.cpp  NoteTracker.h  OscTypes.h  SwingProcessor.h
Source/Components/: Common.h  Controls.h  MidiLearnOverlay.h  MidiMappingManager.h  MidiScheduler.h  Mixer.h  PlaybackEngine.h  Sequencer.h  Tools.h
Source/Core/: AtomicLayout.h  AudioWatchdog.h  BridgeListener.h  BridgeSettings.h  CPU_ISSUES_AND_SOLUTIONS.md  ConfigManager.h  Constants.h  CrashRecovery.h  DebugLog.h  EventBus.h  FileSplitting.md  FlightRecorder.h  GLContextManager.h  LayoutManager.h  LogService.h  MVCViewModel.md  MenuBuilder.h  MidiHardwareController.cpp  MidiHardwareController.h  MixerViewModel.cpp  NamingConventions.md  OPTIMIZATION_OPPORTUNITIES.md  OptimizationCache.h  PlatformGuard.h  Recommendations.md  RepaintCoordinator.h  SequencerViewModel.cpp  SystemController.cpp  SystemController.h  ThreadSafeUI.h  TimerHub.h  TransportViewModel.h
Source/Network/: LocalAddresses.h  NetworkWorker.h  OscManager.cpp  OscSchemaSwapper.h  RtpManager.h
Source/Resources/: app.manifest
Source/Services/: AutoSaver.h  DeferredDeleter.h  GamepadMapping.h  MidiDeviceService.cpp  MidiFilter.h  MidiMappingService.cpp  MidiMappingService.h  ProfileService.cpp  ProfileService.h
Source/Source/: Main.cpp  README.md  SOURCE_AUDIT.md
Source/Source/Audio/: AudioEngine.h  ClockWorker.h  CountInManager.h  CueManager.h  EditableNote.h  LfoGenerator.h  LockFreeMidiPipe.h  LockFreeRingBuffers.h  Metronome.h  MidiScheduler.h  PlaybackController.cpp  PlaybackController.h
Source/Source/Core/: AppState.h  BindingService.h  BridgeContext.cpp  BridgeContext.h  BridgeEventBus.h  CPU_BOTTLENECKS.md  CommandDispatcher.cpp  CommandDispatcher.h  CommandQueue.h  Common.h  Diagnostics.h  MenuBuilder.cpp  MixerViewModel.h  ProjectInfo.h  ROADMAP_CONTINUE.md  ReleaseReadiness.md  SequencerViewModel.h  ShortcutManager.h  ThreadingConfig.h  TimePosition.h  TimerMigrationGuide.md  TransportViewModel.cpp  UIWatchdog.h  UserPreferences.h
Source/Source/Network/: NetworkWorker.cpp  OscAirlock.h  OscLookup.h  OscManager.h  OscSupport.md  RtpBluetoothMidi.md
Source/Source/Resources/: PatchworldBridge.desktop.in
Source/Source/Services/: GamepadService.cpp  GamepadService.h  LatencyCalibrator.h  LatencyTester.h  MidiDeviceService.h  MidiTransformer.h  StateRecycler.h  VelocityProcessor.h
Source/Source/Tests/: RunAll.h
Source/Source/UI/: Animation.h  EnhancedButton.h  Fonts.h  MainComponentEvents.cpp  MixerLookAndFeel.h  NoteEditUndoAction.h  PopupMenuOptions.h  ScaledComponent.h  UIState.h  VulkanContext.cpp
Source/Tests/: AirlockTest.h  ClockSmootherTest.h  MidiMappingCurveTest.h
Source/UI/: ControlHelpers.h  CustomMenuLookAndFeel.h  GPUOffload.md  LayoutHelpers.h  MainComponent.cpp  MainComponent.h  MainComponentCore.cpp  MainComponentGL.cpp  NoteGeometry.h  OPENGL_GHOSTING_RESEARCH.md  OscAddressDialog.h  RenderBackend.h  RenderConfig.h  Theme.h  VulkanContext.h
Source/UI/Panels/: ArpeggiatorPanel.h  ChordGeneratorPanel.h  ConfigControls.h  HeaderPanel.h  LfoGeneratorPanel.h  MidiPlaylist.h  MidiPortsTablePanel.h  MixerPanel.h  ModulesTogglePanel.h  NetworkConfigPanel.h  SequencerPanel.h  SpliceEditor.cpp  TooltipManager.cpp  TrafficMonitor.h  TransportPanel.cpp
Source/UI/Widgets/: CRTBackground.h  DiagnosticOverlay.h  DynamicBackground.h  EnhancedSlider.h  HoverGlowButton.h  Indicators.h  LayoutChoiceWizard.h  MeterBarRenderer.cpp  MidiLearnOverlay.h  ModuleNestingManager.h  MorphSlider.h  ParameterSearchOverlay.h  PhaseVisualizer.h  PianoRoll.h  PlayView.h  SetupWizard.h  SignalPathLegend.h  VelocityLane.h  VelocitySensitiveSlider.h
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BinaryAssets.vcxproj  BinaryAssets.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PatchworldBridge.slnx  PatchworldBridge.vcxproj  PatchworldBridge.vcxproj.filters  PatchworldBridge_rc_lib.vcxproj  PatchworldBridge_rc_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_debug/BinaryAssets.dir/Debug/: BinaryAssets.lib.recipe
build_debug/JUCE/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.slnx  JUCEExportConfig.cmake  cmake_install.cmake
build_vs_final/: PatchworldBridge.slnx
(+101 files in other folders)
